--- a/src/partials/dezgo.html
+++ b/src/partials/dezgo.html
@@ -95,7 +95,7 @@ ugly, tiling, poorly drawn hands, poorly drawn feet, poorly drawn face, out of f
         <option value="dpm">DPM</option>
         <option value="euler">Euler</option>
 		<option value="k_lms">K-LMS</option>
-		<option value="k_lms">pndm</option>
+		<option value="pndm">PNDM</option>
         <option value="euler_a" selected>Euler Ancestral</option>
       </select>
 
