--- a/src/sass/layout/_dezgo.scss
+++ b/src/sass/layout/_dezgo.scss
@@ -1,170 +1,160 @@
-dezgo__api {
-.container {
-position: relative;
-display: flex;
-align-items: flex-start;
-justify-content: space-between;
-}
+.dezgo__api {
+  .container {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 }
 
 .dezgo__form {
-display: flex;
-flex-direction: column;
-align-items: start;
-width: 90%;
-max-width: 500px;
-margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 500px;
 }
 
 .form__label {
-font-size: 16px;
-font-weight: 600;
-margin-top: 30px;
-margin-bottom: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 5px;
 }
 
 .form__label--small {
-font-size: 14px;
-color: var(--secondary-text-color);
-margin-bottom: 15px;
+  font-size: 14px;
+  color: var(--secondary-text-color);
+  margin-bottom: 15px;
 }
 
 .form__textarea {
-resize: vertical;
+  resize: vertical;
 
-width: 100%;
-height: 70px;
+  width: 470px;
+  height: 70px;
 
-background: transparent;
-border: 1px solid var(--secondary-text-color);
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: transparent;
+  border: 1px solid var(--secondary-text-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-border-radius: 6px;
-padding: 10px 14px;
+  border-radius: 6px;
+  padding: 10px 14px;
 
-color: var(--primary-text-color);
-font-family: Arial, Helvetica, sans-serif;
-font-size: 15px;
-font-weight: 600;
+  color: var(--primary-text-color);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: 600;
 
-&:hover {
-border: 1px solid var(--primary-text-color);
-}
+  &:hover {
+    border: 1px solid var(--primary-text-color);
+  }
 
-&:focus-visible {
-outline: none;
-border: 1px solid var(--accent-color);
-}
+  &:focus-visible {
+    outline: none;
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .form__input {
-width: 100%;
+  width: 470px;
 
-background: transparent;
-border: 1px solid var(--secondary-text-color);
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: transparent;
+  border: 1px solid var(--secondary-text-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-border-radius: 6px;
-padding: 10px 14px;
+  border-radius: 6px;
+  padding: 10px 14px;
 
-color: var(--primary-text-color);
-font-family: Arial, Helvetica, sans-serif;
-font-size: 15px;
-font-weight: 600;
+  color: var(--primary-text-color);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: 600;
 
-&:hover {
-border: 1px solid var(--primary-text-color);
-}
+  &:hover {
+    border: 1px solid var(--primary-text-color);
+  }
 
-&:focus-visible {
-outline: none;
-border: 1px solid var(--accent-color);
-}
+  &:focus-visible {
+    outline: none;
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .output__thumb {
-min-width: unset;
-width: 90%;
-margin-top: 30px;
-margin-bottom: 30px;
-position: static;
-display: flex;
-flex-direction: column;
-align-items: center;
+  min-width: 500px;
+  position: fixed;
+  right: 10%;
+  top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-.button {
-margin-bottom: 25px;
-}
+  .button {
+    margin-bottom: 25px;
+  }
 }
 
 .output__title {
-margin-bottom: 10px;
-font-size: 24px;
+  margin-bottom: 10px;
+  font-size: 24px;
 }
 
 .output__img {
-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .form__select {
-width: 100%;
-max-width: 500px;
-padding: 10px 15px;
+  width: 500px;
+  padding: 10px 15px;
 
-background: var(--background-color-dark);
-border: 1px solid var(--secondary-text-color);
-border-radius: 6px;
+  background: var(--background-color-dark);
+  border: 1px solid var(--secondary-text-color);
+  border-radius: 6px;
 
-font-size: 15px;
-color: var(--primary-text-color);
-font-weight: 600;
+  font-size: 15px;
+  color: var(--primary-text-color);
+  font-weight: 600;
 
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-&:hover {
-border: 1px solid var(--primary-text-color);
-}
+  &:hover {
+    border: 1px solid var(--primary-text-color);
+  }
 
-&:focus-visible {
-outline: none;
-border: 1px solid var(--accent-color);
-}
+  &:focus-visible {
+    outline: none;
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .form__range {
-width: 100%;
-max-width: 500px;
+  width: 500px;
 }
 
 .range__descr {
-width: 100%;
-max-width: 520px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-font-size: 14px;
-font-family: 'Courier New', Courier, monospace;
+  width: 520px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .guidance__input,
 .steps__input {
-width: 100%;
-max-width: 500px;
-display: flex;
-align-items: center;
-justify-content: space-between;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .form__range--guidance,
 .form__range--steps {
-width: 100%;
-max-width: 460px;
+  width: 460px;
 }
 
 .guidance__num,
 .steps__num {
-font-weight: 600;
-font-size: 18px;
+  font-weight: 600;
+  font-size: 18px;
 }
-
