--- a/src/sass/layout/_mobile.scss
+++ b/src/sass/layout/_mobile.scss
@@ -1,85 +1,23 @@
-dezgo__api {
+@media only screen and (max-width: 767px) {
+.dezgo__api {
 .container {
-position: relative;
-display: flex;
-align-items: flex-start;
-justify-content: space-between;
+flex-direction: column;
+align-items: center;
+justify-content: flex-start;
 }
 }
 
 .dezgo__form {
-display: flex;
-flex-direction: column;
-align-items: start;
 width: 90%;
 max-width: 500px;
-margin: 0 auto;
 }
 
-.form__label {
-font-size: 16px;
-font-weight: 600;
-margin-top: 30px;
-margin-bottom: 5px;
-}
-
-.form__label--small {
-font-size: 14px;
-color: var(--secondary-text-color);
-margin-bottom: 15px;
-}
-
-.form__textarea {
-resize: vertical;
-
+.form__textarea,
+.form__input,
+.form__select,
+.form__range--guidance,
+.form__range--steps {
 width: 100%;
-height: 70px;
-
-background: transparent;
-border: 1px solid var(--secondary-text-color);
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-border-radius: 6px;
-padding: 10px 14px;
-
-color: var(--primary-text-color);
-font-family: Arial, Helvetica, sans-serif;
-font-size: 15px;
-font-weight: 600;
-
-&:hover {
-border: 1px solid var(--primary-text-color);
-}
-
-&:focus-visible {
-outline: none;
-border: 1px solid var(--accent-color);
-}
-}
-
-.form__input {
-width: 100%;
-
-background: transparent;
-border: 1px solid var(--secondary-text-color);
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-border-radius: 6px;
-padding: 10px 14px;
-
-color: var(--primary-text-color);
-font-family: Arial, Helvetica, sans-serif;
-font-size: 15px;
-font-weight: 600;
-
-&:hover {
-border: 1px solid var(--primary-text-color);
-}
-
-&:focus-visible {
-outline: none;
-border: 1px solid var(--accent-color);
-}
 }
 
 .output__thumb {
@@ -88,83 +26,26 @@ width: 90%;
 margin-top: 30px;
 margin-bottom: 30px;
 position: static;
-display: flex;
-flex-direction: column;
-align-items: center;
-
-.button {
-margin-bottom: 25px;
-}
-}
-
-.output__title {
-margin-bottom: 10px;
-font-size: 24px;
 }
 
 .output__img {
-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 width: 100%;
-}
-
-.form__select {
-width: 100%;
-max-width: 500px;
-padding: 10px 15px;
-
-background: var(--background-color-dark);
-border: 1px solid var(--secondary-text-color);
-border-radius: 6px;
-
-font-size: 15px;
-color: var(--primary-text-color);
-font-weight: 600;
-
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-&:hover {
-border: 1px solid var(--primary-text-color);
-}
-
-&:focus-visible {
-outline: none;
-border: 1px solid var(--accent-color);
-}
-}
-
-.form__range {
-width: 100%;
-max-width: 500px;
+box-shadow: none;
 }
 
 .range__descr {
 width: 100%;
-max-width: 520px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-font-size: 14px;
-font-family: 'Courier New', Courier, monospace;
+font-size: 12px;
 }
 
 .guidance__input,
 .steps__input {
 width: 100%;
-max-width: 500px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-}
-
-.form__range--guidance,
-.form__range--steps {
-width: 100%;
-max-width: 460px;
+margin-bottom: 15px;
 }
 
 .guidance__num,
 .steps__num {
-font-weight: 600;
-font-size: 18px;
+font-size: 14px;
 }
-
+}
