--- a/src/partials/dezgo.html
+++ b/src/partials/dezgo.html
@@ -3,7 +3,7 @@
     <div class="dezgo__form">
       <p class="form__label">Prompt</p>
       <p class="form__label--small">
-        Опишите, как должно выглядеть конечное изображение
+        Опишите, как должно выглядеть конечное изображение(на англ.)
       </p>
       <textarea
         id="prompt"
